Revisar y consolidar logout Vicidial
